Bug 473360 - Built-in profile name is not localised
Summary: Built-in profile name is not localised
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-14 10:54 UTC by Emir SARI
Modified: 2023-08-31 00:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2023-08-14 10:54:27 UTC
The profile name "Built-in" is not localised, and it looks rather awkward as an English string among the other localised messages. This one should be marked as translatable as well.
Comment 1 Nicolas Fella 2023-08-14 12:04:14 UTC
As far as I can tell it tries to localize the name, but I guess it fails because of the intermediate variable
Comment 2 Bug Janitor Service 2023-08-14 12:20:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/886
Comment 3 Kurt Hindenburg 2023-08-31 00:26:40 UTC
Git commit 7b54cc9cd96b32d9170904f3fa065bd785397b04 by Kurt Hindenburg, on behalf of Nicolas Fella.
Committed on 31/08/2023 at 01:58.
Pushed by hindenburg into branch 'master'.

Fix translating the builtin profile name

Having the name in a separate variable breaks extracting the translations

M  +2    -7    src/profile/Profile.cpp

https://invent.kde.org/utilities/konsole/-/commit/7b54cc9cd96b32d9170904f3fa065bd785397b04