Fix translating the builtin profile name

Having the name in a separate variable breaks extracting the translations

BUG: 473360